Changing wording in email.

--- a/HealthTrackerApp/src/main/resources/UserJoinGroupV2.html
+++ b/HealthTrackerApp/src/main/resources/UserJoinGroupV2.html
@@ -39,7 +39,7 @@
 			<div id="content">
 				<p>You have been invited to join the group <strong>%s</strong> by %s.</p>
 				<br>
-				<p>To join this group enter the code <strong>%s</strong> on the ? screen of your app.</p>
+				<p>To join this group enter the code <strong>%s</strong> in the invite section of the groups page in your app.</p>
 				<br>
 				<p>This groups description is "%s".</p>
 			</div>
