DB & email simple stuff

--- a/HealthTrackerApp/src/main/resources/EmailGoalComplete.html
+++ b/HealthTrackerApp/src/main/resources/EmailGoalComplete.html
@@ -37,7 +37,7 @@
 			<h1>A Member Of %s Completed A Goal</h1>
 	
 			<div id="content">
-				<p>%s has completed the goal <strong>%s</strong>!</p>
+				<p>%s has completed a goal in <strong>%s</strong>!</p>
 			</div>
 	
 			<p>&copy; UEA Health App Stuff</p>
